@@ -19,6 +19,7 @@ Version : 4.12.3 #XG1
 - Add Ciloc a Copy Clipboard Only 
 - Add Ciloc Advanced search function that highlights matches and navigates through results.
 - Add AddHtmlLocalized Form created, fills text fields, generates and copies code for HTML localization
+- Add Aboutbox Link and Repository Info
 
 Version : 4.12.2 #XG1
 - BildFusion Add Sharp , Clipboard, Texture Cut.
